--- a/Cource/lesson 8/practika c/parctikaB.html
+++ b/Cource/lesson 8/practika c/parctikaB.html
@@ -11,20 +11,30 @@
     <h1>Любимые породы собак</h1>
     <div class="block">
         <div class="inline">
-            <div>
-                <img src="./57d904ea33314ac48b0f391f2d97fb67.jpg" alt="Русский спаниель">
-                <p>Такой породы у меня мой собакен по кличке Лайт. Я его очень люблю. А это текст, чтобы показать обтекание.  А это текст, чтобы показать обтекание
+            <div class="spaniel">
+                <p>
+                    <img src="./57d904ea33314ac48b0f391f2d97fb67.jpg" alt="Русский спаниель" class="layt">
+                    Такой породы у меня собакен по кличке Лайт. Я его очень люблю.<br>  А это текст, чтобы показать обтекание. <br> А это текст, чтобы показать обтекание<br> 
+                    А это текст, чтобы показать обтекание. <br>  А это текст, чтобы показать обтекание. <br>  А это текст, чтобы показать обтекание. <br>  А это текст, чтобы показать обтекание<br> 
+                    А это текст, чтобы показать обтекание. <br>  А это текст, чтобы показать обтекание. <br>  А это текст, чтобы показать обтекание.<br>   А это текст, чтобы показать обтекание<br> 
+                    А это текст, чтобы показать обтекание. <br>  А это текст, чтобы показать обтекание. <br>  А это текст, чтобы показать обтекание.<br> А это текст, чтобы показать обтекание<br> 
+                    А это текст, чтобы показать обтекание. <br>  А это текст, чтобы показать обтекание.<br>   А это текст, чтобы показать обтекание.  А это текст, чтобы показать обтекание
+                    А это текст, чтобы показать обтекание.  А это текст, чтобы показать обтекание.  А это текст, чтобы показать обтекание.  А это текст, чтобы показать обтекание
+                </p>
+            </div> 
+            <div class="kolli">
+                <p>
+                    <img src="./border-kolli.jpg" alt="Бордер Колли" class="layt">
+                    Такой породы у меня собакен по кличке Куш. Я его очень люблю.<br>  А это текст, чтобы показать обтекание. <br> А это текст, чтобы показать обтекание<br> 
+                    А это текст, чтобы показать обтекание. <br>  А это текст, чтобы показать обтекание. <br>  А это текст, чтобы показать обтекание. <br>  А это текст, чтобы показать обтекание<br> 
+                    А это текст, чтобы показать обтекание. <br>  А это текст, чтобы показать обтекание. <br>  А это текст, чтобы показать обтекание.<br>   А это текст, чтобы показать обтекание<br> 
+                    А это текст, чтобы показать обтекание. <br>  А это текст, чтобы показать обтекание. <br>  А это текст, чтобы показать обтекание.<br> А это текст, чтобы показать обтекание<br> 
+                    А это текст, чтобы показать обтекание. <br>  А это текст, чтобы показать обтекание.<br>   А это текст, чтобы показать обтекание.  А это текст, чтобы показать обтекание
                     А это текст, чтобы показать обтекание.  А это текст, чтобы показать обтекание.  А это текст, чтобы показать обтекание.  А это текст, чтобы показать обтекание
                 </p>
             </div>
-            <img src="./645d8fad026e54b82e2748aaf5e2d9c2.jpg" alt="Сибу Ину">
-            <img src="./border-kolli.jpg" alt="Бордер Колли">
         </div>
-        <div class="inline">
-            <img src="./o2m4j998n29cbakvydd14it0pds2ibeu.jpeg" alt="Сосика Корги">
-            <img src="./346832050433136.jpg" alt="Шпиц">
-            <img src="./c2892acc56ff84fd76c6605706399593.jpg" alt="Чау Чау">
-        </div>
+        <h2>Дальше лень настриавать галерею с собачками</h2>
     </div>
 </body>
 </html>
