feat: выполнил практику

--- a/Cource/lesson 9/B/b.html
+++ b/Cource/lesson 9/B/b.html
@@ -6,56 +6,87 @@
     <title>Пример Normalize.css</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" type="text/css" href="normalize.css">   
-</head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Livvic:ital,wght@0,300;0,400;0,500;0,600;0,700;0,900;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+</head> 
 <body>
-
-
-
    <main>
     <section class="block-1">
             <div class="content-block1">
-                <p></p>
-                <h1></h1>
-                <h2></h2>
-                <p></p>
-                <button></button>
+                <p id="textP-Original">Original & Natural</p>
+                <h1>Agriculture Matter</h1>
+                <h2>Good production</h2>
+                <div id="divP-Dissuade">
+                <p id="textP-Dissuade">Dissuade ecstatic and properly saw entirely sir why laughter endeavor. In on my jointure horrible margaret suitable he speedily.</p>
+                </div>
+                <button><p id="button-Discover">Discover More</p></button>
+                <div class="icon-leaf"></div>
             </div>
     </section>
 
-    <section class= "block-2">
+     <section class= "block-2">
             <div class="text_block-2">
-                <h3></h3>
-                <h2></h2>
+                <h3 id="Popular-Foods">Popular Foods And Vegetables</h3>
+                <h2 id="Quality-Fruits">Quality Fruits & Vegetables</h2>
             </div>
 
             <div class="foods">
 
-                <article>
-                    <div class="foods_1"></div>
+                <article class="foods_1">
+                        <div class="apple">
+                            <img class= "foods-svg" src="./Icon_Apple.svg" alt="Apple">
+                            <p class="foods-text">Apple</p>
+                        </div>
                 </article>
 
                 <article>
-                    <div class="foods_2"></div>
+                    <div class="foods_2">
+                        <div class="apple">
+                            <img class= "foods-svg" src="./blueberry 2.svg" alt="Blueberry">
+                            <p class="foods-text">Blueberry</p>
+                        </div>
+                    </div>
                 </article>
 
                 <article>
-                    <div class="foods_3"></div>
+                    <div class="foods_3">
+                        <div class="apple">
+                            <img class= "foods-svg" src="./icon-Strawberry.svg" alt="Strawberry">
+                            <p class="foods-text">Strawberry</p>
+                        </div>
+                    </div>
                 </article>
 
                 <article>
-                    <div class="foods_4"></div>
+                    <div class="foods_4">
+                        <div class="apple">
+                            <img class= "foods-svg" src="./eggplant.svg" alt="Eggplant">
+                            <p class="foods-text">Eggplant</p>
+                        </div>
+                    </div>
                 </article>
 
                 <article>
-                    <div class="foods_5"></div>
+                    <div class="foods_5">
+                        <div class="apple">
+                            <img class= "foods-svg" src="./cabbage.svg" alt="Cabbage">
+                            <p class="foods-text">Cabbage</p>
+                        </div>
+                    </div>
                 </article>
 
                 <article>
-                    <div class="foods_6"></div>
+                    <div class="foods_6">
+                        <div class="apple">
+                            <img class= "foods-svg" src="./carrot.svg" alt="Carrot">
+                            <p class="foods-text">Carrot</p>
+                        </div>
+                    </div>
                 </article>
             </div>
     </section>
-
+<!-- 
     <section class="block-3">
         <h2></h2>
     </section>
@@ -91,7 +122,7 @@
                 </div>
             </article>
         </div>
-    </section>
+    </section>  -->
    </main>
 </body>
 </html>
