#feat доделал сайтик

--- a/Cource/lesson 9/B/b.html
+++ b/Cource/lesson 9/B/b.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Пример Normalize.css</title>
+    <title>Моя ферма</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" type="text/css" href="normalize.css">   
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -12,6 +12,26 @@
 </head> 
 <body>
    <main>
+
+<header>
+    <div class="nav_logo">
+        <div class="logo"></div>
+        <nav>
+            <ul>
+                <li><a id="home" href="#">Home</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Our Products</a></li>
+                <li><a href="#">Projects</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">News</a></li>
+                <li><a href="#">Contact Us</a></li>
+             </ul>
+        </nav>
+    </div>
+</header>
+
+
+
     <section class="block-1">
             <div class="content-block1">
                 <p id="textP-Original">Original & Natural</p>
@@ -86,43 +106,71 @@
                 </article>
             </div>
     </section>
-<!-- 
-    <section class="block-3">
-        <h2></h2>
+
+    <section class= "block-3">
+        <h2 id="h2_block3">Agriculture Matters to <br>
+            the Future of Bangladesh</h2>
     </section>
 
-    <section class="block-4">
-        <div class="text_block-4">
-            <h3></h3>
-            <h2></h2>
-        </div>
-        <div class="cards">
-            <article>
-                <div class="cards_1"></div>
+    <section class= "block-4">
+        <h3 id="h3_block-4">RECENTLY COMPLETED WORK</h3>
+        <h2 id="h2_block-4">Explore Our Projects</h2>
+
+        
+        <div class="Allcarousel">
+
+            <article class="carousel_1">
+                    <div class="text_carousel">
+                        <p class="Agriculture">Agriculture</p>
+                        <p class="NaturalWay">Natural way of <br>
+                        agriculture</p>
+                    </div>
+                    <div class="arrow"></div>
             </article>
 
-            <article>
-                <div class="cards_2"></div>
-            </article>
-
-            <article>
-                <div class="cards_3"></div>
-            </article>
-
-            <article>
-                <div class="cards_4"></div>
-            </article>
-
-            <article>
-                <div class="cards_5"></div>
-            </article>
-
-            <article>
-                <div class="cards_6">
+            <article class="carousel_2">
+                <div class="text_carousel">
+                    <p class="Agriculture">Agriculture</p>
+                    <p class="NaturalWay">Natural way of <br>
+                    agriculture</p>
                 </div>
+                <div class="arrow"></div>
             </article>
+
+            <article class="carousel_3">
+                <div class="text_carousel">
+                    <p class="Agriculture">Agriculture</p>
+                    <p class="NaturalWay">Natural way of <br>
+                    agriculture</p>
+                </div>
+                <div class="arrow"></div>
+            </article>
+
+            <article class="carousel_4">
+                <div class="text_carousel">
+                    <p class="Agriculture">Agriculture</p>
+                    <p class="NaturalWay">Natural way of <br>
+                    agriculture</p>
+                </div>
+                <div class="arrow"></div>
+            </article>
+         </div>
+    </section>
+
+    <footer>
+        <div class="allFooter">
+                <p class="footerText" id="Copyright">Copyright©Smart Agro. All Right Reserved</p>
+                <div id="emailAndButton">
+                    <input type="email" placeholder="Enter yor mail here..."/>
+                    <button id="buttonFoot">GO</button>
+                </div>
+            <div id="footerTextAll">
+                <p class="footerText">Terms & Conditions</p>
+                <p class="footerText">Privacy Policy</p>
+            </div>
         </div>
-    </section>  -->
+    </footer>
+
    </main>
 </body>
 </html>
