feat: добавил резиновую верстку к 1 и 2 блоку

--- a/Cource/lesson 9/B/b.html
+++ b/Cource/lesson 9/B/b.html
@@ -30,8 +30,6 @@
     </div>
 </header>
 
-
-
     <section class="block-1">
             <div class="content-block1">
                 <p id="textP-Original">Original & Natural</p>
@@ -41,7 +39,7 @@
                 <p id="textP-Dissuade">Dissuade ecstatic and properly saw entirely sir why laughter endeavor. In on my jointure horrible margaret suitable he speedily.</p>
                 </div>
                 <button><p id="button-Discover">Discover More</p></button>
-                <div class="icon-leaf"></div>
+                    <div class="icon-leaf"></div>
             </div>
     </section>
 
@@ -52,57 +50,46 @@
             </div>
 
             <div class="foods">
-
-                <article class="foods_1">
+                <article class="foods_all">
                         <div class="apple">
                             <img class= "foods-svg" src="./Icon_Apple.svg" alt="Apple">
                             <p class="foods-text">Apple</p>
                         </div>
                 </article>
 
-                <article>
-                    <div class="foods_2">
+                <article class="foods_all">
                         <div class="apple">
                             <img class= "foods-svg" src="./blueberry 2.svg" alt="Blueberry">
                             <p class="foods-text">Blueberry</p>
                         </div>
-                    </div>
                 </article>
 
-                <article>
-                    <div class="foods_3">
+                <article class="foods_all">
                         <div class="apple">
                             <img class= "foods-svg" src="./icon-Strawberry.svg" alt="Strawberry">
                             <p class="foods-text">Strawberry</p>
                         </div>
-                    </div>
                 </article>
 
-                <article>
-                    <div class="foods_4">
+                <article class="foods_all">
                         <div class="apple">
                             <img class= "foods-svg" src="./eggplant.svg" alt="Eggplant">
                             <p class="foods-text">Eggplant</p>
                         </div>
-                    </div>
                 </article>
 
-                <article>
-                    <div class="foods_5">
+                <article class="foods_all">
                         <div class="apple">
                             <img class= "foods-svg" src="./cabbage.svg" alt="Cabbage">
                             <p class="foods-text">Cabbage</p>
                         </div>
-                    </div>
                 </article>
 
-                <article>
-                    <div class="foods_6">
+                <article class="foods_all">
                         <div class="apple">
                             <img class= "foods-svg" src="./carrot.svg" alt="Carrot">
                             <p class="foods-text">Carrot</p>
                         </div>
-                    </div>
                 </article>
             </div>
     </section>
