feat: доделал мобильную верстку

--- a/lesson 13/index.html
+++ b/lesson 13/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Avion</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="styleMedai.css">
     <link rel="stylesheet" type="text/css" href="normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -40,7 +41,7 @@
             </div>
         </header>
 
-        <div id="block_2">
+        <section id="block_2">
             <div id="left_block_2">
                 <div id="block_2_text_and_button">
                     <h1>The furniture brand for the future, with timeless designs</h1>
@@ -48,7 +49,7 @@
                 </div>
 
                 <div id="block_2_text">
-                    <p>
+                    <p id="block_2_text_mobile">
                         A new era in eco friendly furniture with Avelon, the French luxury retail brand
                         with nice fonts, tasteful colors and a beautiful way to display things digitally 
                         using modern web technologies.
@@ -59,14 +60,14 @@
             <div id="right_block_2">
 
             </div>
-        </div>
+        </section >
 
-        <div id="block_3">
-            <h2>What makes our brand different</h2>
+        <section  id="block_3">
+            <h2 id="block_3_text_h2">What makes our brand <br> different</h2>
 
             <div id="block_3_text_all">
 
-                <div class="block_3_text">
+                <article class="block_3_text">
                     <div id="block_3_icons_1"></div>
                     <h3 class="block_3_text_h3">Next day as standard</h3>
                     <p class="block_3_text_p"> 
@@ -74,9 +75,14 @@
                         your order  <br> 
                         the next day as standard
                     </p>
-                </div>
+                    <p class="block_3_text_p_mobile"> 
+                        Order before 3pm and get
+                        your order 
+                        the next day as standard
+                    </p>
+                </article>
 
-                <div class="block_3_text">
+                <article class="block_3_text">
                     <div  id="block_3_icons_2"></div>
                     <h3 class="block_3_text_h3">Made by true artisans</h3>
                     <p class="block_3_text_p"> 
@@ -85,9 +91,15 @@
                         real passion and <br>
                         craftmanship
                     </p>
-                </div>
+                    <p class="block_3_text_p_mobile"> 
+                        Handmade crafted goods 
+                        made with 
+                        real passion and 
+                        craftmanship
+                    </p>
+                </article>
 
-                <div class="block_3_text">
+                <article class="block_3_text">
                     <div  id="block_3_icons_3"></div>
                     <h3 class="block_3_text_h3">Unbeatable prices</h3>
                     <p class="block_3_text_p"> 
@@ -95,9 +107,14 @@
                         and quality you won’t find <br>
                         better prices anywhere
                     </p>
-                </div>
+                    <p class="block_3_text_p_mobile"> 
+                        For our materials 
+                        and quality you won’t find 
+                        better prices anywhere
+                    </p>
+                </article>
 
-                <div class="block_3_text">
+                <article class="block_3_text">
                     <div  id="block_3_icons_4"></div>
                     <h3 class="block_3_text_h3">Recycled packaging</h3>
                     <p class="block_3_text_p"> 
@@ -105,11 +122,16 @@
                         packaging to ensure our <br>
                         footprint is manageable
                     </p>
-                </div>
+                    <p class="block_3_text_p_mobile"> 
+                        We use 100% recycled
+                        packaging to ensure our
+                        footprint is manageable
+                    </p>
+                </article>
             </div>
-        </div> 
+        </section > 
 
-        <div class="block_4">
+        <section  class="block_4">
 
             <h2 id="block_4_h2">
                 New ceramics
@@ -117,45 +139,45 @@
 
             <div class="block_4_all_cards">
 
-                <div class="block_4_card">
+                <article class="block_4_card">
                     <div id="block_4_img_1" class="block_4_img" ></div>
                     <div class="block_4_last_text">
                         <p class="block_4_text_1">The Dandy chair</p>
                         <p class="block_4_text_2">£250</p>
                     </div>
-                </div>
+                </article>
 
-                <div class="block_4_card">
+                <article class="block_4_card">
                     <div class="block_4_img" id="block_4_img_2"></div>
                     <div class="block_4_last_text">
                         <p class="block_4_text_1">Rustic Vase Set</p>
                         <p class="block_4_text_2">£155</p>
                     </div>
-                </div>
+                </article>
 
-                <div class="block_4_card">
+                <article class="block_4_card">
                     <div class="block_4_img" id="block_4_img_3"></div>
                     <div class="block_4_last_text">
                         <p class="block_4_text_1">The Silky Vase</p>
                         <p class="block_4_text_2">£125</p>
                     </div>
-                </div>
+                </article>
 
-                <div class="block_4_card">
+                <article class="block_4_card">
                     <div class="block_4_img" id="block_4_img_4"></div>
                     <div class="block_4_last_text">
                         <p class="block_4_text_1">The Lucy Lamp</p>
                         <p class="block_4_text_2">£399</p>
                     </div>
-                </div>
+                </article>
             </div>
 
             <div id="#all_button_block_4">
                 <button id="button_block_4">View collection</button>
             </div>
-        </div>
+        </section >
 
-        <div class="block_5">
+        <section  class="block_5">
 
             <div>
                 <h2 id="block_5_h2">Our popular products</h2>
@@ -163,41 +185,43 @@
 
             <div class="block_5_all_cards">
 
-                <div class="block_5_card">
+                <article class="block_5_card">
                     <div class="block_5_img" id="block_5_img_1"></div>
                     <div class="block_5_last_text">
                         <p class="block_5_text_1">The Poplar suede sofa</p>
                         <p class="block_5_text_2">£980</p>
                     </div>
-                </div>
+                </article>
 
-                <div class="block_5_card">
+                <article class="block_5_card">
                     <div class="block_5_img" id="block_5_img_2"></div>
                     <div class="block_5_last_text">
                         <p class="block_5_text_1">The Dandy chair</p>
                         <p class="block_5_text_2">£250</p>
                     </div>
-                </div>
+                </article>
 
-                <div class="block_5_card">
+                <article class="block_5_card" id="block_5_card_mobile">
                     <div class="block_5_img" id="block_5_img_3"></div>
                     <div class="block_5_last_text">
                         <p class="block_5_text_1">The Dandy chair</p>
                         <p class="block_5_text_2">£250</p>
                     </div>
-                </div>
+                </article>
             </div>
             <div id="all_button_block_5">
                 <button id="button_block_5">View collection</button>
             </div>
-        </div>
+        </section>
 
-        <div class="block_6_background">
+        <section  class="block_6_background">
             <div class="block_6">
                 <div id="block_6_all_text">
                     <p class="block_6_text">Join the club and get the benefits</p>
                     <p class="block_6_text"  id="block_6_text">Sign up for our newsletter and receive exclusive <br>
                     offers on new ranges, sales, pop up stores and more</p>
+                    <p class="block_6_text"  id="block_6_text_mobile">Sign up for our newsletter and receive exclusive
+                        offers on new ranges, sales, pop up stores and more</p>
                 </div>
 
                 <div class="block_6_form">
@@ -205,14 +229,16 @@
                     <button id="button_block_6">Sign up</button>
                 </div>
             </div>
-        </div>
+        </section >
 
-        <div class="block_7">
+        <section  class="block_7">
             
             <div class="block_7_left_container">
                 <div class="block_7_all_text">
                     <p id="block_7_text" class="block_7_text">From a studio in London to a global brand with
                         over 400 outlets</p>
+                    <p id="block_7_text_mobile" class="block_7_text">From a studio in London to a global brand with <br>
+                          over 400 outlets</p>
                     <p  id="block_7_text_1" class="block_7_text">When we started Avion, the idea was simple. Make high 
                         quality furniture affordable and available for the mass 
                         market. 
@@ -229,8 +255,7 @@
             </div>
 
             <div class="block_7_right_image"></div>
-        </div>    
-
+        </section >    
 
         <footer>
             <div class="footer_block_all">
@@ -281,22 +306,15 @@
             <p class="footer_text" id="footer_p">Copyright 2022 Avion LTD</p>
             
             <div class="footer_icons_all">
-                <div id="inkedin" class="icons_footer"></div>
-                <div id="facebook" class="icons_footer"></div>
-                <div id="inst" class="icons_footer"></div>
-                <div id="skaype" class="icons_footer"></div>
-                <div id="twitter" class="icons_footer"></div>
-                <div id="pinterest" class="icons_footer"></div>
+                <article id="inkedin" class="icons_footer"></article>
+                <article id="facebook" class="icons_footer"></article>
+                <article id="inst" class="icons_footer"></article>
+                <article id="skaype" class="icons_footer"></article>
+                <article id="twitter" class="icons_footer"></article>
+                <article id="pinterest" class="icons_footer"></article>
             </div>
-
             </div>
         </footer>
-
-
-
-
-
-
     </main>
 </body>
 </html>
