feat:Выполнил практику A

--- a/lesson 13/index.html
+++ b/lesson 13/index.html
@@ -29,13 +29,13 @@
 
                 <nav id="main_menu">
                     <ul>
-                        <li><a id="home" href="#">Home</a></li>
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">Our Products</a></li>
-                        <li><a href="#">Projects</a></li>
-                        <li><a href="#">Services</a></li>
-                        <li><a href="#">News</a></li>
-                        <li><a href="#">Contact Us</a></li>
+                        <li><a id="home" href="#">Plant pots</a></li>
+                        <li><a href="#">Ceramics</a></li>
+                        <li><a href="#">Tables</a></li>
+                        <li><a href="#">Chairs</a></li>
+                        <li><a href="#">Crockery</a></li>
+                        <li><a href="#">Tableware</a></li>
+                        <li><a href="#">Cutlery</a></li>
                      </ul>
                 </nav>
             </div>
