feat:Выполнил пратику С

--- a/lesson 13/index.html
+++ b/lesson 13/index.html
@@ -63,15 +63,15 @@
         </section >
 
         <section  id="block_3">
-            <h2 id="block_3_text_h2">What makes our brand <br> different</h2>
+            <h2 id="block_3_text_h2">What makes our brand different</h2>
 
             <div id="block_3_text_all">
 
-                <article class="block_3_text">
+                <article id="block_3_text_" class="block_3_text">
                     <div id="block_3_icons_1"></div>
                     <h3 class="block_3_text_h3">Next day as standard</h3>
                     <p class="block_3_text_p"> 
-                        Order before 3pm and get
+                        Order before 3pm and get <br>
                         your order  <br> 
                         the next day as standard
                     </p>
@@ -82,7 +82,7 @@
                     </p>
                 </article>
 
-                <article class="block_3_text">
+                <article  id="block_3_text_1" class="block_3_text">
                     <div  id="block_3_icons_2"></div>
                     <h3 class="block_3_text_h3">Made by true artisans</h3>
                     <p class="block_3_text_p"> 
@@ -99,12 +99,12 @@
                     </p>
                 </article>
 
-                <article class="block_3_text">
+                <article class="block_3_text" id="block_3_text_2">
                     <div  id="block_3_icons_3"></div>
                     <h3 class="block_3_text_h3">Unbeatable prices</h3>
                     <p class="block_3_text_p"> 
-                        For our materials <br>
-                        and quality you won’t find <br>
+                        For our materials and<br>
+                        quality you won’t find <br>
                         better prices anywhere
                     </p>
                     <p class="block_3_text_p_mobile"> 
@@ -114,15 +114,15 @@
                     </p>
                 </article>
 
-                <article class="block_3_text">
+                <article class="block_3_text" id="block_3_text_3">
                     <div  id="block_3_icons_4"></div>
-                    <h3 class="block_3_text_h3">Recycled packaging</h3>
+                    <h3 id="block_3_text_h3_3" class="block_3_text_h3">Recycled packaging</h3>
                     <p class="block_3_text_p"> 
                         We use 100% recycled <br> 
                         packaging to ensure our <br>
                         footprint is manageable
                     </p>
-                    <p class="block_3_text_p_mobile"> 
+                    <p class="block_3_text_p_mobile" id="block_3_text_4"> 
                         We use 100% recycled
                         packaging to ensure our
                         footprint is manageable
