feat: добавил доступность для сайта

--- a/lesson 13/index.html
+++ b/lesson 13/index.html
@@ -18,14 +18,14 @@
         <header>
             <div class="allMenu">
                 <div class="block_1">
-                    <div id="lupa"></div>
-                    <div><p id="block_1_Text">Avion</p></div>
+                    <div id="lupa" aria-label="Поиск"></div>
+                    <div><p id="block_1_Text" aria-label="Avion">Avion</p></div>
                     <div id="block_1_icons">
-                        <div id="icon_telezka"></div>
-                        <div id="icon_people"></div>
+                        <div id="icon_telezka" aria-label="Корзина"></div>
+                        <div id="icon_people" aria-label="Профиль"></div>
                     </div>
                 </div>
-                <hr>
+                <hr aria-label="Разделительная черта"> 
 
                 <nav id="main_menu">
                     <ul>
@@ -45,7 +45,7 @@
             <div id="left_block_2">
                 <div id="block_2_text_and_button">
                     <h1>The furniture brand for the future, with timeless designs</h1>
-                    <button class="button_block_2">View collection</button>
+                    <button class="button_block_2" aria-label="View collection">View collection</button>
                 </div>
 
                 <div id="block_2_text">
@@ -57,7 +57,7 @@
                 </div>
             </div>
 
-            <div id="right_block_2">
+            <div id="right_block_2" aria-label="Изображение стула">
 
             </div>
         </section >
@@ -68,7 +68,7 @@
             <div id="block_3_text_all">
 
                 <article id="block_3_text_" class="block_3_text">
-                    <div id="block_3_icons_1"></div>
+                    <div id="block_3_icons_1" aria-label="Значок доставки"></div>
                     <h3 class="block_3_text_h3">Next day as standard</h3>
                     <p class="block_3_text_p"> 
                         Order before 3pm and get <br>
@@ -83,7 +83,7 @@
                 </article>
 
                 <article  id="block_3_text_1" class="block_3_text">
-                    <div  id="block_3_icons_2"></div>
+                    <div  id="block_3_icons_2" aria-label="Значок галочки"></div>
                     <h3 class="block_3_text_h3">Made by true artisans</h3>
                     <p class="block_3_text_p"> 
                         Handmade crafted goods <br>
@@ -100,7 +100,7 @@
                 </article>
 
                 <article class="block_3_text" id="block_3_text_2">
-                    <div  id="block_3_icons_3"></div>
+                    <div  id="block_3_icons_3" aria-label="Значок банковской карты"></div>
                     <h3 class="block_3_text_h3">Unbeatable prices</h3>
                     <p class="block_3_text_p"> 
                         For our materials and<br>
@@ -115,7 +115,7 @@
                 </article>
 
                 <article class="block_3_text" id="block_3_text_3">
-                    <div  id="block_3_icons_4"></div>
+                    <div  id="block_3_icons_4" aria-label="Значок растения"></div>
                     <h3 id="block_3_text_h3_3" class="block_3_text_h3">Recycled packaging</h3>
                     <p class="block_3_text_p"> 
                         We use 100% recycled <br> 
@@ -140,7 +140,7 @@
             <div class="block_4_all_cards">
 
                 <article class="block_4_card">
-                    <div id="block_4_img_1" class="block_4_img" ></div>
+                    <div id="block_4_img_1" class="block_4_img" aria-label="Изображение стула"></div>
                     <div class="block_4_last_text">
                         <p class="block_4_text_1">The Dandy chair</p>
                         <p class="block_4_text_2">£250</p>
@@ -148,7 +148,7 @@
                 </article>
 
                 <article class="block_4_card">
-                    <div class="block_4_img" id="block_4_img_2"></div>
+                    <div class="block_4_img" id="block_4_img_2" aria-label="Изображение глинянных горшков"></div>
                     <div class="block_4_last_text">
                         <p class="block_4_text_1">Rustic Vase Set</p>
                         <p class="block_4_text_2">£155</p>
@@ -156,7 +156,7 @@
                 </article>
 
                 <article class="block_4_card">
-                    <div class="block_4_img" id="block_4_img_3"></div>
+                    <div class="block_4_img" id="block_4_img_3" aria-label="Изображение шелковистой вазы"></div>
                     <div class="block_4_last_text">
                         <p class="block_4_text_1">The Silky Vase</p>
                         <p class="block_4_text_2">£125</p>
@@ -164,7 +164,7 @@
                 </article>
 
                 <article class="block_4_card">
-                    <div class="block_4_img" id="block_4_img_4"></div>
+                    <div class="block_4_img" id="block_4_img_4" aria-label="Изображение лампы"></div>
                     <div class="block_4_last_text">
                         <p class="block_4_text_1">The Lucy Lamp</p>
                         <p class="block_4_text_2">£399</p>
@@ -186,7 +186,7 @@
             <div class="block_5_all_cards">
 
                 <article class="block_5_card">
-                    <div class="block_5_img" id="block_5_img_1"></div>
+                    <div class="block_5_img" id="block_5_img_1" aria-label="Изображение дивана"></div>
                     <div class="block_5_last_text">
                         <p class="block_5_text_1">The Poplar suede sofa</p>
                         <p class="block_5_text_2">£980</p>
@@ -194,7 +194,7 @@
                 </article>
 
                 <article class="block_5_card">
-                    <div class="block_5_img" id="block_5_img_2"></div>
+                    <div class="block_5_img" id="block_5_img_2" aria-label="Изображение стула"></div>
                     <div class="block_5_last_text">
                         <p class="block_5_text_1">The Dandy chair</p>
                         <p class="block_5_text_2">£250</p>
@@ -202,7 +202,7 @@
                 </article>
 
                 <article class="block_5_card" id="block_5_card_mobile">
-                    <div class="block_5_img" id="block_5_img_3"></div>
+                    <div class="block_5_img" id="block_5_img_3" aria-label="Изображение маленького стула"></div>
                     <div class="block_5_last_text">
                         <p class="block_5_text_1">The Dandy chair</p>
                         <p class="block_5_text_2">£250</p>
@@ -254,7 +254,7 @@
                 </div>
             </div>
 
-            <div class="block_7_right_image"></div>
+            <div class="block_7_right_image" aria-label="Изображение уютной комнаты"></div>
         </section >    
 
         <footer>
@@ -306,12 +306,12 @@
             <p class="footer_text" id="footer_p">Copyright 2022 Avion LTD</p>
             
             <div class="footer_icons_all">
-                <article id="inkedin" class="icons_footer"></article>
-                <article id="facebook" class="icons_footer"></article>
-                <article id="inst" class="icons_footer"></article>
-                <article id="skaype" class="icons_footer"></article>
-                <article id="twitter" class="icons_footer"></article>
-                <article id="pinterest" class="icons_footer"></article>
+                <article id="inkedin" class="icons_footer" aria-label="Значок inkedin"></article>
+                <article id="facebook" class="icons_footer" aria-label="Значок facebook"></article>
+                <article id="inst" class="icons_footer" aria-label="Значок instagram"></article>
+                <article id="skaype" class="icons_footer" aria-label="Значок skaype"></article>
+                <article id="twitter" class="icons_footer" aria-label="Значок twitter"></article>
+                <article id="pinterest" class="icons_footer" aria-label="Значок pinterest"></article>
             </div>
             </div>
         </footer>
